готовые две странички с сss

--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
                                             <!-- FOOTER -->
  <footer class="footer"> 
             
-    <a class="footer-logo-link" href="./index.html">
-            <p class="footer-logo-text"> WebStudio </p>
-            </a>
-            <address class="address">г. Киев, пр-т Леси Украинки, 26 </address>
+    <a class="logo link" href="./index.html" lang="en">
+        <p class="footer-logo-studio"><span class="footer-web">Web</span>Studio</p>
+    </a>
+            <address class="footer-address">г. Киев, пр-т Леси Украинки, 26 </address>
            
             <ul>
                     <li class="footer-contact">
